# stocker

./: .dockerignore  .env.example  .gitignore  BLOG.md  CLAUDE.md  Dockerfile  README.md  client.py  inference.py  openenv.yaml  push-hf.sh  pyproject.toml  pyrightconfig.json  run.sh  validate-submission.sh
.github/workflows/: ci.yml  deploy_spaces.yml
app/: config.py  main.py  models.py
app/api/: corpus.py  council.py  env.py  frontend.py  health.py  meta.py  ohlcv.py  router.py  state.py  training.py
app/core/: corpus_tasks.py  environment.py  graders.py  tasks.py
app/council/: __init__.py  llm.py  moderator.py  runner.py  specialists.py  types.py
app/data/: corpus.py  indicators.py  loader.py
data/: forums.parquet  indicators.parquet  macro.parquet  news.parquet  peers.parquet  prices.parquet
data/ideal_profits/: task_easy.json  task_hard.json  task_medium.json
data/sources/: forums.json  macro.json  news.json
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css
scripts/: build_corpus.py  build_dataset.py  build_ideal_profit.py  compile_results.py  precache_endpoint.py  render_charts.py  serve_vllm.sh  upload_cache.py  validate_tasks.py
server/: app.py
spaces/train/: Dockerfile  app.py
tests/: test_api.py  test_council.py  test_environment.py  test_graders.py
training/: colab_launcher.ipynb  eval_rollout.py  smoke_test.ipynb  train_grpo.ipynb  train_grpo.py  tune_easy_gemma4.ipynb
training/runs/eval_baseline_mock/: summary.csv
